--- a/chassis.ioc
+++ b/chassis.ioc
@@ -2,6 +2,10 @@
 CAD.formats=[]
 CAD.pinconfig=Dual
 CAD.provider=
+CAN1.CalculateBaudRate=875000
+CAN1.CalculateTimeBit=1142
+CAN1.CalculateTimeQuantum=380.95238095238096
+CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate
 Dma.Request0=USART3_RX
 Dma.RequestsNb=1
 Dma.USART3_RX.0.Direction=DMA_PERIPH_TO_MEMORY
@@ -22,32 +26,35 @@ GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32F407IGH6
 Mcu.Family=STM32F4
-Mcu.IP0=DMA
-Mcu.IP1=FREERTOS
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=SYS
-Mcu.IP5=TIM4
-Mcu.IP6=USART3
-Mcu.IPNb=7
+Mcu.IP0=CAN1
+Mcu.IP1=DMA
+Mcu.IP2=FREERTOS
+Mcu.IP3=NVIC
+Mcu.IP4=RCC
+Mcu.IP5=SYS
+Mcu.IP6=TIM4
+Mcu.IP7=USART3
+Mcu.IPNb=8
 Mcu.Name=STM32F407I(E-G)Hx
 Mcu.Package=UFBGA176
 Mcu.Pin0=PA14
 Mcu.Pin1=PA13
-Mcu.Pin10=PH10
-Mcu.Pin11=PD14
-Mcu.Pin12=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin13=VP_SYS_VS_tim14
-Mcu.Pin14=VP_TIM4_VS_ClockSourceINT
-Mcu.Pin2=PC11
-Mcu.Pin3=PC10
-Mcu.Pin4=PC14-OSC32_IN
-Mcu.Pin5=PC15-OSC32_OUT
-Mcu.Pin6=PH0-OSC_IN
-Mcu.Pin7=PH1-OSC_OUT
-Mcu.Pin8=PH12
-Mcu.Pin9=PH11
-Mcu.PinsNb=15
+Mcu.Pin10=PH12
+Mcu.Pin11=PH11
+Mcu.Pin12=PH10
+Mcu.Pin13=PD14
+Mcu.Pin14=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin15=VP_SYS_VS_tim14
+Mcu.Pin16=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin2=PD0
+Mcu.Pin3=PC11
+Mcu.Pin4=PC10
+Mcu.Pin5=PD1
+Mcu.Pin6=PC14-OSC32_IN
+Mcu.Pin7=PC15-OSC32_OUT
+Mcu.Pin8=PH0-OSC_IN
+Mcu.Pin9=PH1-OSC_OUT
+Mcu.PinsNb=17
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407IGHx
@@ -84,6 +91,12 @@ PC14-OSC32_IN.Mode=LSE-External-Oscillator
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
+PD0.Locked=true
+PD0.Mode=CAN_Activate
+PD0.Signal=CAN1_RX
+PD1.Locked=true
+PD1.Mode=CAN_Activate
+PD1.Signal=CAN1_TX
 PD14.Locked=true
 PD14.Signal=S_TIM4_CH3
 PH0-OSC_IN.Mode=HSE-External-Oscillator
@@ -135,7 +148,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_TIM4_Init-TIM4-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_TIM4_Init-TIM4-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true,6-MX_USART1_UART_Init-USART1-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -168,10 +181,10 @@ RCC.VCOI2SOutputFreq_Value=192000000
 RCC.VCOInputFreq_Value=1000000
 RCC.VCOOutputFreq_Value=336000000
 RCC.VcooutputI2S=96000000
-SH.S_TIM4_CH3.0=TIM4_CH3,Output Compare3 CH3
+SH.S_TIM4_CH3.0=TIM4_CH3,PWM Generation3 CH3
 SH.S_TIM4_CH3.ConfNb=1
-TIM4.Channel-Output\ Compare3\ CH3=TIM_CHANNEL_3
-TIM4.IPParameters=Period,Channel-Output Compare3 CH3,Prescaler
+TIM4.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
+TIM4.IPParameters=Period,Prescaler,Channel-PWM Generation3 CH3
 TIM4.Period=21000-1
 TIM4.Prescaler=50
 USART3.BaudRate=100000
