--- a/chassis.ioc
+++ b/chassis.ioc
@@ -43,9 +43,10 @@ Mcu.Pin10=PH12
 Mcu.Pin11=PH11
 Mcu.Pin12=PH10
 Mcu.Pin13=PD14
-Mcu.Pin14=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin15=VP_SYS_VS_tim14
-Mcu.Pin16=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin14=PA0-WKUP
+Mcu.Pin15=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin16=VP_SYS_VS_tim14
+Mcu.Pin17=VP_TIM4_VS_ClockSourceINT
 Mcu.Pin2=PD0
 Mcu.Pin3=PC11
 Mcu.Pin4=PC10
@@ -54,7 +55,7 @@ Mcu.Pin6=PC14-OSC32_IN
 Mcu.Pin7=PC15-OSC32_OUT
 Mcu.Pin8=PH0-OSC_IN
 Mcu.Pin9=PH1-OSC_OUT
-Mcu.PinsNb=17
+Mcu.PinsNb=18
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407IGHx
@@ -63,6 +64,7 @@ MxDb.Version=DB.6.0.150
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.DMA1_Stream1_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.EXTI0_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
@@ -79,6 +81,12 @@ NVIC.TimeBase=TIM8_TRG_COM_TIM14_IRQn
 NVIC.TimeBaseIP=TIM14
 NVIC.USART3_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+PA0-WKUP.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
+PA0-WKUP.GPIO_Label=KEY
+PA0-WKUP.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
+PA0-WKUP.GPIO_PuPd=GPIO_PULLUP
+PA0-WKUP.Locked=true
+PA0-WKUP.Signal=GPXTI0
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
@@ -148,7 +156,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_TIM4_Init-TIM4-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true,6-MX_USART1_UART_Init-USART1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_TIM4_Init-TIM4-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true,6-MX_CAN1_Init-CAN1-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -181,6 +189,8 @@ RCC.VCOI2SOutputFreq_Value=192000000
 RCC.VCOInputFreq_Value=1000000
 RCC.VCOOutputFreq_Value=336000000
 RCC.VcooutputI2S=96000000
+SH.GPXTI0.0=GPIO_EXTI0
+SH.GPXTI0.ConfNb=1
 SH.S_TIM4_CH3.0=TIM4_CH3,PWM Generation3 CH3
 SH.S_TIM4_CH3.ConfNb=1
 TIM4.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
