--- a/chassis.ioc
+++ b/chassis.ioc
@@ -20,7 +20,7 @@ Dma.USART3_RX.0.Priority=DMA_PRIORITY_VERY_HIGH
 Dma.USART3_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,FootprintOK
-FREERTOS.Tasks01=LEDTask,24,128,StartLEDTask,Default,NULL,Dynamic,NULL,NULL;BuzzerTask,8,128,StartBuzzerTask,Default,NULL,Dynamic,NULL,NULL;KEYTask,8,128,StartKEYTask,Default,NULL,Dynamic,NULL,NULL;PrintTask,8,128,StartPrintTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=LEDTask,24,128,StartLEDTask,Default,NULL,Dynamic,NULL,NULL;BuzzerTask,8,128,StartBuzzerTask,Default,NULL,Dynamic,NULL,NULL;KEYTask,8,128,StartKEYTask,Default,NULL,Dynamic,NULL,NULL;PrintTask,24,128,StartPrintTask,Default,NULL,Dynamic,NULL,NULL
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
@@ -206,7 +206,8 @@ TIM4.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM4.IPParameters=Period,Prescaler,Channel-PWM Generation3 CH3
 TIM4.Period=21000-1
 TIM4.Prescaler=50
-USART1.IPParameters=VirtualMode
+USART1.BaudRate=115200
+USART1.IPParameters=VirtualMode,BaudRate
 USART1.VirtualMode=VM_ASYNC
 USART3.BaudRate=100000
 USART3.IPParameters=VirtualMode,Parity,BaudRate,WordLength
