我建立了abonden文件夹,用于存放我的经过

--- a/chassis.ioc
+++ b/chassis.ioc
@@ -20,7 +20,7 @@ Dma.USART3_RX.0.Priority=DMA_PRIORITY_VERY_HIGH
 Dma.USART3_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,FootprintOK
-FREERTOS.Tasks01=LEDTask,24,128,StartLEDTask,Default,NULL,Dynamic,NULL,NULL;BuzzerTask,8,128,StartBuzzerTask,Default,NULL,Dynamic,NULL,NULL;KEYTask,8,128,StartKEYTask,Default,NULL,Dynamic,NULL,NULL;PrintTask,24,128,StartPrintTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=LEDTask,24,128,StartLEDTask,Default,NULL,Dynamic,NULL,NULL
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
@@ -32,10 +32,9 @@ Mcu.IP2=FREERTOS
 Mcu.IP3=NVIC
 Mcu.IP4=RCC
 Mcu.IP5=SYS
-Mcu.IP6=TIM4
-Mcu.IP7=USART1
-Mcu.IP8=USART3
-Mcu.IPNb=9
+Mcu.IP6=USART1
+Mcu.IP7=USART3
+Mcu.IPNb=8
 Mcu.Name=STM32F407I(E-G)Hx
 Mcu.Package=UFBGA176
 Mcu.Pin0=PA14
@@ -45,11 +44,9 @@ Mcu.Pin11=PH1-OSC_OUT
 Mcu.Pin12=PH12
 Mcu.Pin13=PH11
 Mcu.Pin14=PH10
-Mcu.Pin15=PD14
-Mcu.Pin16=PA0-WKUP
-Mcu.Pin17=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin18=VP_SYS_VS_tim14
-Mcu.Pin19=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin15=PA0-WKUP
+Mcu.Pin16=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin17=VP_SYS_VS_tim14
 Mcu.Pin2=PB7
 Mcu.Pin3=PD0
 Mcu.Pin4=PC11
@@ -58,7 +55,7 @@ Mcu.Pin6=PD1
 Mcu.Pin7=PC14-OSC32_IN
 Mcu.Pin8=PA9
 Mcu.Pin9=PC15-OSC32_OUT
-Mcu.PinsNb=20
+Mcu.PinsNb=18
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407IGHx
@@ -114,8 +111,6 @@ PD0.Signal=CAN1_RX
 PD1.Locked=true
 PD1.Mode=CAN_Activate
 PD1.Signal=CAN1_TX
-PD14.Locked=true
-PD14.Signal=S_TIM4_CH3
 PH0-OSC_IN.Mode=HSE-External-Oscillator
 PH0-OSC_IN.Signal=RCC_OSC_IN
 PH1-OSC_OUT.Mode=HSE-External-Oscillator
@@ -165,7 +160,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_TIM4_Init-TIM4-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true,6-MX_CAN1_Init-CAN1-false-HAL-true,7-MX_USART1_UART_Init-USART1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART3_UART_Init-USART3-false-HAL-true,5-MX_CAN1_Init-CAN1-false-HAL-true,6-MX_USART1_UART_Init-USART1-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -200,12 +195,6 @@ RCC.VCOOutputFreq_Value=336000000
 RCC.VcooutputI2S=96000000
 SH.GPXTI0.0=GPIO_EXTI0
 SH.GPXTI0.ConfNb=1
-SH.S_TIM4_CH3.0=TIM4_CH3,PWM Generation3 CH3
-SH.S_TIM4_CH3.ConfNb=1
-TIM4.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
-TIM4.IPParameters=Period,Prescaler,Channel-PWM Generation3 CH3
-TIM4.Period=21000-1
-TIM4.Prescaler=50
 USART1.BaudRate=115200
 USART1.IPParameters=VirtualMode,BaudRate
 USART1.VirtualMode=VM_ASYNC
@@ -218,7 +207,5 @@ VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
 VP_SYS_VS_tim14.Mode=TIM14
 VP_SYS_VS_tim14.Signal=SYS_VS_tim14
-VP_TIM4_VS_ClockSourceINT.Mode=Internal
-VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
 board=custom
 rtos.0.ip=FREERTOS
