--- a/Robot.ioc
+++ b/Robot.ioc
@@ -1,26 +1,37 @@
 #MicroXplorer Configuration settings - do not modify
-CAD.formats=[]
-CAD.pinconfig=Dual
+CAD.formats=
+CAD.pinconfig=
 CAD.provider=
 CAN1.CalculateBaudRate=875000
 CAN1.CalculateTimeBit=1142
 CAN1.CalculateTimeQuantum=380.95238095238096
 CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate
 Dma.Request0=USART3_RX
-Dma.RequestsNb=1
+Dma.Request1=USART1_TX
+Dma.RequestsNb=2
+Dma.USART1_TX.1.Direction=DMA_MEMORY_TO_PERIPH
+Dma.USART1_TX.1.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART1_TX.1.Instance=DMA2_Stream7
+Dma.USART1_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART1_TX.1.MemInc=DMA_MINC_ENABLE
+Dma.USART1_TX.1.Mode=DMA_NORMAL
+Dma.USART1_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART1_TX.1.PeriphInc=DMA_PINC_DISABLE
+Dma.USART1_TX.1.Priority=DMA_PRIORITY_LOW
+Dma.USART1_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 Dma.USART3_RX.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.USART3_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.USART3_RX.0.Instance=DMA1_Stream1
 Dma.USART3_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
 Dma.USART3_RX.0.MemInc=DMA_MINC_ENABLE
-Dma.USART3_RX.0.Mode=DMA_CIRCULAR
+Dma.USART3_RX.0.Mode=DMA_NORMAL
 Dma.USART3_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.USART3_RX.0.PeriphInc=DMA_PINC_DISABLE
-Dma.USART3_RX.0.Priority=DMA_PRIORITY_VERY_HIGH
+Dma.USART3_RX.0.Priority=DMA_PRIORITY_LOW
 Dma.USART3_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,FootprintOK
-FREERTOS.Tasks01=LEDTask,24,128,StartLEDTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=DebugTask,24,128,StartDebugTask,Default,NULL,Dynamic,NULL,NULL;LEDTask,8,128,StartLEDTask,Default,NULL,Dynamic,NULL,NULL
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
@@ -37,25 +48,22 @@ Mcu.IP7=USART3
 Mcu.IPNb=8
 Mcu.Name=STM32F407I(E-G)Hx
 Mcu.Package=UFBGA176
-Mcu.Pin0=PA14
-Mcu.Pin1=PA13
-Mcu.Pin10=PH0-OSC_IN
-Mcu.Pin11=PH1-OSC_OUT
-Mcu.Pin12=PH12
-Mcu.Pin13=PH11
-Mcu.Pin14=PH10
-Mcu.Pin15=PA0-WKUP
-Mcu.Pin16=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin17=VP_SYS_VS_tim14
-Mcu.Pin2=PB7
-Mcu.Pin3=PD0
-Mcu.Pin4=PC11
-Mcu.Pin5=PC10
-Mcu.Pin6=PD1
-Mcu.Pin7=PC14-OSC32_IN
-Mcu.Pin8=PA9
-Mcu.Pin9=PC15-OSC32_OUT
-Mcu.PinsNb=18
+Mcu.Pin0=PB8
+Mcu.Pin1=PA14
+Mcu.Pin10=PH12
+Mcu.Pin11=PH11
+Mcu.Pin12=PH10
+Mcu.Pin13=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin14=VP_SYS_VS_tim6
+Mcu.Pin2=PA13
+Mcu.Pin3=PB9
+Mcu.Pin4=PB7
+Mcu.Pin5=PC11
+Mcu.Pin6=PC10
+Mcu.Pin7=PA9
+Mcu.Pin8=PH0-OSC_IN
+Mcu.Pin9=PH1-OSC_OUT
+Mcu.PinsNb=15
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407IGHx
@@ -63,12 +71,12 @@ MxCube.Version=6.15.0
 MxDb.Version=DB.6.0.150
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.DMA1_Stream1_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
+NVIC.DMA2_Stream7_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
-NVIC.EXTI0_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true\:false
 NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false\:false
@@ -76,17 +84,11 @@ NVIC.SavedPendsvIrqHandlerGenerated=true
 NVIC.SavedSvcallIrqHandlerGenerated=true
 NVIC.SavedSystickIrqHandlerGenerated=true
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true\:false
-NVIC.TIM8_TRG_COM_TIM14_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
-NVIC.TimeBase=TIM8_TRG_COM_TIM14_IRQn
-NVIC.TimeBaseIP=TIM14
-NVIC.USART3_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.TIM6_DAC_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
+NVIC.TimeBase=TIM6_DAC_IRQn
+NVIC.TimeBaseIP=TIM6
+NVIC.USART1_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
-PA0-WKUP.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
-PA0-WKUP.GPIO_Label=KEY
-PA0-WKUP.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
-PA0-WKUP.GPIO_PuPd=GPIO_PULLUP
-PA0-WKUP.Locked=true
-PA0-WKUP.Signal=GPXTI0
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
@@ -97,20 +99,14 @@ PA9.Signal=USART1_TX
 PB7.Locked=true
 PB7.Mode=Asynchronous
 PB7.Signal=USART1_RX
+PB8.Mode=CAN_Activate
+PB8.Signal=CAN1_RX
+PB9.Mode=CAN_Activate
+PB9.Signal=CAN1_TX
 PC10.Mode=Asynchronous
 PC10.Signal=USART3_TX
 PC11.Mode=Asynchronous
 PC11.Signal=USART3_RX
-PC14-OSC32_IN.Mode=LSE-External-Oscillator
-PC14-OSC32_IN.Signal=RCC_OSC32_IN
-PC15-OSC32_OUT.Mode=LSE-External-Oscillator
-PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
-PD0.Locked=true
-PD0.Mode=CAN_Activate
-PD0.Signal=CAN1_RX
-PD1.Locked=true
-PD1.Mode=CAN_Activate
-PD1.Signal=CAN1_TX
 PH0-OSC_IN.Mode=HSE-External-Oscillator
 PH0-OSC_IN.Signal=RCC_OSC_IN
 PH1-OSC_OUT.Mode=HSE-External-Oscillator
@@ -134,7 +130,7 @@ ProjectManager.BackupPrevious=false
 ProjectManager.CompilerLinker=GCC
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
-ProjectManager.CoupleFile=true
+ProjectManager.CoupleFile=false
 ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
@@ -148,19 +144,19 @@ ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
-ProjectManager.PreviousToolchain=
+ProjectManager.PreviousToolchain=STM32CubeIDE
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=chassis.ioc
-ProjectManager.ProjectName=chassis
+ProjectManager.ProjectFileName=Robot.ioc
+ProjectManager.ProjectName=Robot
 ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
-ProjectManager.TargetToolchain=CMake
+ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
-ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART3_UART_Init-USART3-false-HAL-true,5-MX_CAN1_Init-CAN1-false-HAL-true,6-MX_USART1_UART_Init-USART1-false-HAL-true
+ProjectManager.UnderRoot=true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_CAN1_Init-CAN1-false-HAL-true,6-MX_USART3_UART_Init-USART3-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -170,42 +166,38 @@ RCC.APB2CLKDivider=RCC_HCLK_DIV2
 RCC.APB2Freq_Value=84000000
 RCC.APB2TimFreq_Value=168000000
 RCC.CortexFreq_Value=168000000
+RCC.EnbaleCSS=true
 RCC.EthernetFreq_Value=168000000
 RCC.FCLKCortexFreq_Value=168000000
 RCC.FamilyName=M
 RCC.HCLKFreq_Value=168000000
-RCC.HSE_VALUE=25000000
+RCC.HSE_VALUE=12000000
 RCC.HSI_VALUE=16000000
-RCC.I2SClocksFreq_Value=96000000
-RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,PLLSourceVirtual,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
+RCC.I2SClocksFreq_Value=192000000
+RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EnbaleCSS,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,PLLSourceVirtual,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
 RCC.LSI_VALUE=32000
 RCC.MCO2PinFreq_Value=168000000
 RCC.PLLCLKFreq_Value=168000000
-RCC.PLLM=25
-RCC.PLLN=336
+RCC.PLLM=6
+RCC.PLLN=168
 RCC.PLLQCLKFreq_Value=84000000
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 RCC.RTCFreq_Value=32000
-RCC.RTCHSEDivFreq_Value=12500000
+RCC.RTCHSEDivFreq_Value=6000000
 RCC.SYSCLKFreq_VALUE=168000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-RCC.VCOI2SOutputFreq_Value=192000000
-RCC.VCOInputFreq_Value=1000000
+RCC.VCOI2SOutputFreq_Value=384000000
+RCC.VCOInputFreq_Value=2000000
 RCC.VCOOutputFreq_Value=336000000
-RCC.VcooutputI2S=96000000
-SH.GPXTI0.0=GPIO_EXTI0
-SH.GPXTI0.ConfNb=1
-USART1.BaudRate=115200
-USART1.IPParameters=VirtualMode,BaudRate
+RCC.VcooutputI2S=192000000
+USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 USART3.BaudRate=100000
-USART3.IPParameters=VirtualMode,Parity,BaudRate,WordLength
+USART3.IPParameters=VirtualMode,BaudRate,Parity
 USART3.Parity=PARITY_EVEN
 USART3.VirtualMode=VM_ASYNC
-USART3.WordLength=WORDLENGTH_8B
 VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
-VP_SYS_VS_tim14.Mode=TIM14
-VP_SYS_VS_tim14.Signal=SYS_VS_tim14
+VP_SYS_VS_tim6.Mode=TIM6
+VP_SYS_VS_tim6.Signal=SYS_VS_tim6
 board=custom
-rtos.0.ip=FREERTOS
