--- a/Robot.ioc
+++ b/Robot.ioc
@@ -33,8 +33,9 @@ Dma.USART3_RX.0.PeriphInc=DMA_PINC_DISABLE
 Dma.USART3_RX.0.Priority=DMA_PRIORITY_VERY_HIGH
 Dma.USART3_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 FREERTOS.FootprintOK=true
-FREERTOS.IPParameters=Tasks01,FootprintOK
-FREERTOS.Tasks01=DebugTask,24,128,StartDebugTask,Default,NULL,Dynamic,NULL,NULL;LEDTask,8,128,StartLEDTask,Default,NULL,Dynamic,NULL,NULL;ReceiveTask,40,128,StartReceiveTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.IPParameters=Tasks01,FootprintOK,Queues01
+FREERTOS.Queues01=ControlQueue,16,uint16_t,0,Dynamic,NULL,NULL
+FREERTOS.Tasks01=DebugTask,24,128,StartDebugTask,Default,NULL,Dynamic,NULL,NULL;LEDTask,8,128,StartLEDTask,Default,NULL,Dynamic,NULL,NULL;ReceiveTask,40,128,StartReceiveTask,Default,NULL,Dynamic,NULL,NULL;CANTask,40,128,StartCANTask,Default,NULL,Dynamic,NULL,NULL
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
