--- a/Robot.ioc
+++ b/Robot.ioc
@@ -2,13 +2,13 @@
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
-CAN1.BS1=CAN_BS1_2TQ
+CAN1.BS1=CAN_BS1_10TQ
 CAN1.BS2=CAN_BS2_3TQ
-CAN1.CalculateBaudRate=999999
+CAN1.CalculateBaudRate=1000000
 CAN1.CalculateTimeBit=1000
-CAN1.CalculateTimeQuantum=166.66666666666669
+CAN1.CalculateTimeQuantum=71.42857142857143
 CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,Prescaler,BS2,BS1
-CAN1.Prescaler=7
+CAN1.Prescaler=3
 Dma.Request0=USART3_RX
 Dma.Request1=USART1_TX
 Dma.RequestsNb=2
